Add Docker Compose template and setup instructions for itzg/minecraft-server